# b-gpm

./: .gitignore  BAYESIAN_GPM_FIXES.md  README.md  exmpl_usage.py  pyproject.toml
b_gpm/: add_new.py
b_gpm/active_learning/: __init__.py  acquisition.py  active_learner.py  batch_selection.py  pool.py
b_gpm/datasets/: __init__.py  reward_dataset.py
b_gpm/models/: __init__.py  bayesian_types.py  loss.py  rw_model_general_preference.py
b_gpm/scripts/: combine_generate.py  compute_prob.py  generate.py  rank_gp.py  rank_pairrm_llama.py  update_dataset.py
b_gpm/scripts/RMs/: ranker.py
b_gpm/trainer/: __init__.py  rm_trainer_general_preference.py
b_gpm/utils/: custom_distributed_sampler.py  deepspeed.py  deepspeed_utils.py  utils.py
eval/: batch_inference_rm_bgpm.py  batch_inference_rm_bgpm.sh  batch_inference_rm_general_preference.py  batch_inference_rm_general_preference.sh
extra/: bgpm_variance.py
llm_alignment/scripts/: compute_prob_from_raw.py  compute_score_from_raw.py  preload.py  rank.py
llm_alignment/scripts/RMs/: ranker.py  reward_model.py
rewardbench/: rewardbench_utils.py  run_rm_rewardbench.py  run_rm_rewardbench.sh  run_rm_rewardbench_lora.sh
scripts/: run_train_bgpm_al.sh  run_train_bgpm_al_lora.sh  run_train_rm_bgpm_lora.sh  run_train_rm_bgpm_multi.sh  run_train_rm_bgpm_single.sh  run_train_rm_general_preference_lora.sh  run_train_rm_general_preference_multi.sh  run_train_rm_general_preference_single.sh  train_rm_bgpm.py  train_rm_bgpm_al.py  train_rm_general_preference.py
sppo/: setup.py
