[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "b-gpm"
version = "0.1.0"
description = "Implementation of Bayesian general preference model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "bitsandbytes>=0.48.2; sys_platform == 'linux'",
    "black>=25.11.0",
    "datasets>=4.4.1",
    "einops>=0.8.1",
    "evaluate>=0.4.6",
    "fastchat>=0.1.0",
    "flake8>=7.3.0",
    "flash-attn; sys_platform == 'linux'",
    "hf-doc-builder>=0.5.0",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=0.36.0",
    "isort>=7.0.0",
    "jinja2>=3.1.6",
    "loralib>=0.1.2",
    "ninja>=1.13.0",
    "packaging>=25.0",
    "parameterized>=0.9.0",
    "peft==0.17.1",
    "protobuf>=6.33.0",
    "pytest>=9.0.0",
    "rewardbench>=0.1.4",
    "safetensors>=0.6.2",
    "sentencepiece>=0.2.1",
    "tensorboard>=2.20.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.0",
    "trl>=0.19.1",
    "wandb>=0.22.3",
    "wheel>=0.45.1",
]

[tool.setuptools.packages.find]
include = ["b_gpm*"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.3.18/flash_attn-2.7.4+cu128torch2.8-cp311-cp311-linux_x86_64.whl", marker = "sys_platform == 'linux'" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.extra-build-dependencies]
deepspeed = ["torch"]
